<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MainFragment">
        <RadioGroup
            android:id="@+id/citiesGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/minskBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minsk" />

            <CheckBox
                android:id="@+id/dzerzhinskBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dzerzhinsk" />

            <CheckBox
                android:id="@+id/grognoBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grodno" />

            <CheckBox
                android:id="@+id/gomelBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gomel" />
        </RadioGroup>

        <TextView
            android:id="@+id/weatherText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weatherText"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/citiesGroup" />

        <Button
            android:id="@+id/buttonForCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonForCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherText" />

        <TextView
            android:id="@+id/weatherTextForHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weatherTextForHour"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonForCity" />

        <Button
            android:id="@+id/buttonForHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonForHour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherTextForHour" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weatherRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonForHour" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>