<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weatherInfo"
            type="com.example.weather.models.DayEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageSettings"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_baseline_settings"
                app:tint="@color/black" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/themeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/tema"
                app:switchPadding="@dimen/_5sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/cityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/City"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:entries="@array/cityNames"
            app:layout_constraintStart_toEndOf="@id/cityText"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/dailyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/week"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintTop_toBottomOf="@id/spinner" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_80sdp"
            android:paddingEnd="@dimen/_80sdp"
            app:layout_constraintBottom_toTopOf="@id/lowerLayout"
            app:layout_constraintTop_toBottomOf="@id/dailyText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lowerLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager">

            <View
                android:id="@+id/viewSupporter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintBottom_toTopOf="@id/dayWeatherText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dayWeatherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/weather_day"
                android:text="@{`Погода на сегодня в городе `+weatherInfo.cityName}"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@id/viewBackground"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/viewBackground"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dayWeatherText" />

            <View
                android:id="@+id/viewFadingEdge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="@id/viewBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:paddingTop="@dimen/_4sdp"
                android:src="@drawable/ic_baseline_access_time_24"
                android:shadowColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewBackground" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:hint="@string/timeText"
                android:textColor="@color/black"
                android:paddingTop="@dimen/_4sdp"
                android:text="@{`Время: ` + weatherInfo.dateTime}"
                app:layout_constraintStart_toEndOf="@id/timeIcon"
                app:layout_constraintTop_toTopOf="@id/timeIcon" />

            <ImageView
                android:id="@+id/temperatureIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/ic_baseline_graphic"
                app:layout_constraintStart_toStartOf="@id/timeIcon"
                app:layout_constraintTop_toBottomOf="@id/timeIcon" />

            <TextView
                android:id="@+id/temperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:hint="@string/temperatureText"
                android:textColor="@color/black"
                android:text="@{`Температура: ` + weatherInfo.temperature.dayTemp+`°C`}"
                app:layout_constraintStart_toEndOf="@id/temperatureIcon"
                app:layout_constraintTop_toBottomOf="@id/timeIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>